--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Foodies - Fresh Bread & Delicious Food Delivered Daily | Created by Hardik Chavda</title>
+    <title>Foodies - Fresh Bread & Delicious Food Delivered Daily | Created by Hardik Chavda 2025</title>
     
     <!-- Meta Tags for SEO and Social Media -->
     <meta name="description" content="Foodies - Fresh bread baked daily with passion. Order delicious sandwiches, burgers, and freshly baked goods online. Good food choices are good investments!" />
